--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   <!-- Header -->
   <header>
     <div class="container">
-      <img src="assets/images/logo.png" alt="Logo Agrinho 2025" class="logo">
+      <img src="img/logo-agrinho.jpg" alt="Logo Agrinho 2025" class="logo">
       <nav>
         <ul>
           <li><a href="#about">Sobre</a></li>
